nav bar align fix

--- a/resources/css/reset.css
+++ b/resources/css/reset.css
@@ -43,4 +43,5 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}.campus-icon {
 }
